tests/ui/issues/issue-3521-2.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3521-2.rs:5:23
   |
LL |     static y: isize = foo + 1;
   |                       ^^^ non-constant value
   |
help: consider using `let` instead of `static`
   |
LL -     static y: isize = foo + 1;
LL +     let y: isize = foo + 1;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0435`.
